[package]
name = "lineage_boss_visualization"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", default-features = true }
image = { version = "0.25.8", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
rfd = { version = "0.17.2", default-features = true }

[profile.release]
codegen-units = 1
lto = true
strip = true
